fixed misaligned padding on article

--- a/src/Wedding.App/Components/Layout/MainLayout.razor.css
+++ b/src/Wedding.App/Components/Layout/MainLayout.razor.css
@@ -52,7 +52,7 @@ main {
 
     article {
         padding-left: 2rem !important;
-        padding-right: 1.5rem !important;
+        padding-right: 2rem !important;
     }
 }
 
